# FYP

.history/Frontend/: package_20240914082049.json  package_20240914082355.json
Backend/: Cargo.toml  README.md  bacon.toml
Backend/.cargo/: config.toml
Backend/configuration/: development.yaml
Backend/examples/: quick_dev.rs  quick_dev2.rs  quick_dev3.rs  quick_dev4.rs  quick_dev5.rs  quick_dev6.rs  quick_dev7.rs  quick_dev8.rs  test_list_facility.rs  test_new_event_request.rs  test_registration.rs  test_update_admin.rs  test_update_facility.rs  test_update_organiser.rs  test_update_user.rs
Backend/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql  02-insert-states-districts.sql  03-insert-blood-collection-facility.sql  03-insert-states-districts.sql  04-insert-blood-collection-facility.sql  04-insert-other-data.sql  05-insert-other-data.sql
Backend/src/: application.rs  config.rs  context.rs  error.rs  log.rs  main.rs  model.rs  scheduler.rs  state.rs
Backend/src/_dev_utils/: dev_db.rs  mod.rs
Backend/src/auth/: error.rs  mod.rs  password.rs  role.rs  token.rs
Backend/src/context/: mod.rs
Backend/src/crypt/: error.rs  mod.rs  password.rs  role.rs  token.rs
Backend/src/job/: error.rs  mod.rs  reset_eligibility.rs
Backend/src/log/: mod.rs
Backend/src/model/: admin.rs  admin_notification.rs  admin_session.rs  base.rs  change_event_request.rs  district.rs  donation_history.rs  error.rs  event.rs  facility.rs  facility_notification.rs  facility_session.rs  mod.rs  new_event_request.rs  organiser.rs  organiser_notification.rs  organiser_session.rs  registration.rs  state.rs  task.rs  user.rs  user_notification.rs  user_session.rs
Backend/src/model/enums/: blood_type.rs  eligibility_status.rs  event_request_status.rs  mod.rs  registration_status.rs
Backend/src/model/store/: error.rs  mod.rs
Backend/src/utils/: error.rs  mod.rs
Backend/src/web/: error.rs  middleware_auth.rs  mod.rs  response_map.rs  routes_hello.rs  routes_login.rs  routes_logout.rs  routes_logout_all.rs  routes_refresh.rs  routes_static.rs  routes_tickets.rs
Backend/src/web/middleware/: auth.rs  context.rs  mod.rs  response_map.rs
Backend/src/web/routes/: admin.rs  admin_notifications.rs  blood_type.rs  change_event_request.rs  district.rs  donation_history.rs  event.rs  event_registration.rs  facility.rs  facility_notifications.rs  fallback.rs  get_credentials.rs  hello.rs  login.rs  logout.rs  logout_all.rs  mod.rs  new_event_request.rs  organiser.rs  organiser_notifications.rs  refresh.rs  register.rs  state.rs  user.rs  user_notifications.rs
Backend/web-folder/: index.html
Frontend/: .env  .env.d.ts  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite-env.d.ts  vite.config.ts
Frontend/public/: site.webmanifest
Frontend/src/: App.tsx  app.css  index.tsx
Frontend/src/api/: admin.ts  blood-donation-statistics.ts  blood-types.ts  change-event-request.ts  districts.ts  donation-history.ts  event-registration.ts  events.ts  facility.ts  login.ts  logout.ts  logoutAll.ts  new-event-proposal.ts  notifications.ts  organiser.ts  register.ts  states.ts  user.ts
Frontend/src/components/: admin-notification-dialog.tsx  colour-mode-toggle.tsx  error-toast.tsx  facility-notification-dialog.tsx  logo.tsx  logout.tsx  navigation-bar.tsx  organiser-notification-dialog.tsx  profile.tsx  success-toast.tsx  test-fetch-auth.tsx  test-login.tsx  user-notification-dialog.tsx
Frontend/src/context/: user-context.tsx  userContext.tsx
Frontend/src/pages/: about.tsx
Frontend/src/routes/: about.tsx  districts.ts  index.tsx  login.ts  logout.ts  register.ts
Frontend/src/types/: admin.ts  blood-donation-statistics.ts  blood-types.ts  error.ts  (+18 more)
(+128 files in other folders)
