[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[dependencies]
# Async
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"

# Serialisation
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"

# Authentication
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# Web
axum = "0.7.9"
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
tower-cookies = "0.10.0"
headers = "0.4.0"
axum-extra = { version = "0.9.6", features = ["typed-header"] }

# Database
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "chrono" ] }

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Email
resend-rs = { version = "0.9.1", default-features = false, features = ["rustls-tls"] }

# Others
base64-url = "3.0.0"
lazy-regex = "3.3.0"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.93"
httpc-test = "0.1.10"
serial_test = "3.2.0"