[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[dependencies]
# Async
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"

# Serialisation
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = { version = "3.12.0", features = ["base64"] }

# Authentication
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# Web
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tower-cookies = "0.11.0"
headers = "0.4.0"
axum-extra = { version = "0.9.6", features = ["typed-header"] }

# Database
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "chrono" ] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Scheduling
tokio-cron-scheduler = { version = "0.13.0" }

# Config
config = { version = "0.15.4", features = ["yaml"] }

# Others
base64-url = "3.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.95"
httpc-test = "0.1.10"
serial_test = "3.2.0"